@@ -14,6 +14,11 @@
 Changes Since 0.3.9
 ===================
 
+* docutils/__init__.py:
+
+  - Added ``__version_details__`` attribute to describe code source
+    (repository/snapshot/release).
+
 * docutils/parsers/rst/__init__.py:
 
   - Added validator to tab_width setting, with test.  Closes SF bug
